--- a/resource/assets/language/cn/game/gameSheet_cn.json
+++ b/resource/assets/language/cn/game/gameSheet_cn.json
@@ -1,29 +1,30 @@
 {"file":"gameSheet_cn.png","frames":{
-"gameButton_tiao_cn":{"x":1340,"y":242,"w":134,"h":133,"offX":0,"offY":0,"sourceW":134,"sourceH":133},
-"gameButton_ting_cn":{"x":1751,"y":67,"w":169,"h":173,"offX":0,"offY":0,"sourceW":169,"sourceH":173},
-"gameButton_tong_cn":{"x":1067,"y":242,"w":135,"h":134,"offX":0,"offY":0,"sourceW":135,"sourceH":134},
-"gameButton_wan_cn":{"x":1204,"y":242,"w":134,"h":133,"offX":0,"offY":0,"sourceW":134,"sourceH":133},
-"gameButtonSure_cn":{"x":605,"y":66,"w":289,"h":103,"offX":0,"offY":0,"sourceW":289,"sourceH":103},
-"gameHszTip1_cn":{"x":0,"y":66,"w":603,"h":54,"offX":0,"offY":0,"sourceW":603,"sourceH":54},
-"gameHszTip2_cn":{"x":0,"y":122,"w":515,"h":55,"offX":0,"offY":0,"sourceW":515,"sourceH":55},
-"gameIcon_continue_cn":{"x":462,"y":179,"w":395,"h":63,"offX":0,"offY":0,"sourceW":395,"sourceH":63},
-"gameIcon_dq_cn":{"x":430,"y":244,"w":225,"h":67,"offX":0,"offY":0,"sourceW":225,"sourceH":67},
-"gameIcon_hu_cn":{"x":1922,"y":0,"w":76,"h":83,"offX":0,"offY":0,"sourceW":76,"sourceH":83},
-"gameIcon_lose_cn":{"x":0,"y":236,"w":194,"h":104,"offX":0,"offY":0,"sourceW":194,"sourceH":104},
-"gameIcon_th_cn":{"x":2000,"y":0,"w":43,"h":51,"offX":0,"offY":0,"sourceW":43,"sourceH":51},
-"gameIcon_tianhu_cn":{"x":1045,"y":0,"w":852,"h":65,"offX":0,"offY":0,"sourceW":852,"sourceH":65},
-"gameIcon_tiao_cn":{"x":517,"y":122,"w":51,"h":51,"offX":0,"offY":0,"sourceW":51,"sourceH":51},
-"gameIcon_ting_cn":{"x":1974,"y":138,"w":42,"h":51,"offX":2,"offY":2,"sourceW":46,"sourceH":55},
-"gameIcon_tong_cn":{"x":1975,"y":85,"w":51,"h":51,"offX":0,"offY":0,"sourceW":51,"sourceH":51},
-"gameIcon_tuoguan_cn":{"x":0,"y":0,"w":1043,"h":64,"offX":0,"offY":0,"sourceW":1043,"sourceH":64},
-"gameIcon_wait_cn":{"x":0,"y":179,"w":460,"h":55,"offX":0,"offY":0,"sourceW":460,"sourceH":55},
-"gameIcon_wait1_cn":{"x":1476,"y":242,"w":289,"h":54,"offX":0,"offY":0,"sourceW":289,"sourceH":54},
-"gameIcon_wan_cn":{"x":1922,"y":85,"w":51,"h":51,"offX":0,"offY":0,"sourceW":51,"sourceH":51},
-"gameIcon_xp_cn":{"x":1767,"y":242,"w":225,"h":67,"offX":0,"offY":0,"sourceW":225,"sourceH":67},
-"gameIcon_zhuang_cn":{"x":1922,"y":138,"w":50,"h":51,"offX":0,"offY":0,"sourceW":50,"sourceH":51},
-"gameButton_cancelTrust_cn":{"x":196,"y":236,"w":232,"h":81,"offX":0,"offY":0,"sourceW":232,"sourceH":81},
-"gameButton_chi_cn":{"x":896,"y":67,"w":169,"h":174,"offX":0,"offY":0,"sourceW":169,"sourceH":174},
-"gameButton_gang_cn":{"x":1409,"y":67,"w":169,"h":173,"offX":0,"offY":0,"sourceW":169,"sourceH":173},
-"gameButton_guo_cn":{"x":1238,"y":67,"w":169,"h":173,"offX":0,"offY":0,"sourceW":169,"sourceH":173},
-"gameButton_hu_cn":{"x":1067,"y":67,"w":169,"h":173,"offX":0,"offY":0,"sourceW":169,"sourceH":173},
-"gameButton_peng_cn":{"x":1580,"y":67,"w":169,"h":173,"offX":0,"offY":0,"sourceW":169,"sourceH":173}}}
+"gameIcon_ting_cn":{"x":1934,"y":263,"w":42,"h":51,"offX":2,"offY":2,"sourceW":46,"sourceH":55},
+"gameButton_wan_cn":{"x":1898,"y":0,"w":131,"h":132,"offX":1,"offY":0,"sourceW":134,"sourceH":133},
+"gameIcon_th_cn":{"x":1015,"y":162,"w":42,"h":51,"offX":0,"offY":0,"sourceW":43,"sourceH":51},
+"gameButton_chi_cn":{"x":603,"y":61,"w":168,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
+"gameIcon_zhuang_cn":{"x":663,"y":234,"w":49,"h":50,"offX":0,"offY":1,"sourceW":50,"sourceH":51},
+"gameButton_hu_cn":{"x":1562,"y":61,"w":168,"h":172,"offX":0,"offY":1,"sourceW":169,"sourceH":173},
+"gameIcon_hu_cn":{"x":589,"y":234,"w":74,"h":82,"offX":1,"offY":0,"sourceW":76,"sourceH":83},
+"gameHszTip1_cn":{"x":0,"y":61,"w":603,"h":54,"offX":0,"offY":0,"sourceW":603,"sourceH":54},
+"gameIcon_dq_cn":{"x":1709,"y":263,"w":225,"h":67,"offX":0,"offY":0,"sourceW":225,"sourceH":67},
+"gameIcon_wait1_cn":{"x":1195,"y":233,"w":289,"h":54,"offX":0,"offY":0,"sourceW":289,"sourceH":54},
+"gameIcon_tong_cn":{"x":965,"y":162,"w":50,"h":50,"offX":0,"offY":0,"sourceW":51,"sourceH":51},
+"gameIcon_wan_cn":{"x":514,"y":115,"w":50,"h":50,"offX":1,"offY":0,"sourceW":51,"sourceH":51},
+"gameButton_gang_cn":{"x":1226,"y":61,"w":168,"h":172,"offX":0,"offY":1,"sourceW":169,"sourceH":173},
+"gameIcon_xp_cn":{"x":1484,"y":233,"w":225,"h":67,"offX":0,"offY":0,"sourceW":225,"sourceH":67},
+"gameButton_peng_cn":{"x":1058,"y":61,"w":168,"h":172,"offX":0,"offY":1,"sourceW":169,"sourceH":173},
+"gameButton_tiao_cn":{"x":459,"y":169,"w":130,"h":132,"offX":2,"offY":0,"sourceW":134,"sourceH":133},
+"gameIcon_tiao_cn":{"x":391,"y":224,"w":50,"h":50,"offX":1,"offY":0,"sourceW":51,"sourceH":51},
+"gameButtonSure_cn":{"x":771,"y":61,"w":287,"h":101,"offX":1,"offY":0,"sourceW":289,"sourceH":103},
+"gameIcon_wait_cn":{"x":0,"y":169,"w":459,"h":55,"offX":1,"offY":0,"sourceW":460,"sourceH":55},
+"gameButton_ting_cn":{"x":1394,"y":61,"w":168,"h":172,"offX":0,"offY":1,"sourceW":169,"sourceH":173},
+"gameButton_cancelTrust_cn":{"x":965,"y":233,"w":230,"h":80,"offX":1,"offY":0,"sourceW":232,"sourceH":81},
+"gameButton_tong_cn":{"x":1898,"y":132,"w":131,"h":131,"offX":2,"offY":1,"sourceW":135,"sourceH":134},
+"gameIcon_continue_cn":{"x":0,"y":224,"w":391,"h":61,"offX":2,"offY":1,"sourceW":395,"sourceH":63},
+"gameIcon_tianhu_cn":{"x":1038,"y":0,"w":848,"h":61,"offX":2,"offY":2,"sourceW":852,"sourceH":65},
+"gameIcon_lose_cn":{"x":771,"y":162,"w":194,"h":103,"offX":0,"offY":0,"sourceW":194,"sourceH":104},
+"gameButton_guo_cn":{"x":1730,"y":61,"w":168,"h":172,"offX":0,"offY":1,"sourceW":169,"sourceH":173},
+"gameIcon_tuoguan_cn":{"x":0,"y":0,"w":1038,"h":61,"offX":3,"offY":1,"sourceW":1043,"sourceH":64},
+"gameHszTip2_cn":{"x":0,"y":115,"w":514,"h":54,"offX":1,"offY":0,"sourceW":515,"sourceH":55},
+"imgPao_cn":{"x":712,"y":234,"w":49,"h":47,"offX":0,"offY":0,"sourceW":49,"sourceH":47}}}
