--- a/resource/assets/language/en/game/gameSheet_en.json
+++ b/resource/assets/language/en/game/gameSheet_en.json
@@ -1,29 +1,30 @@
 {"file":"gameSheet_en.png","frames":{
-"gameButton_peng_en":{"x":855,"y":201,"w":169,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
-"gameButton_tiao_en":{"x":1824,"y":293,"w":134,"h":133,"offX":0,"offY":1,"sourceW":135,"sourceH":134},
-"gameButton_ting_en":{"x":684,"y":201,"w":169,"h":173,"offX":0,"offY":0,"sourceW":169,"sourceH":173},
-"gameButton_tong_en":{"x":1687,"y":293,"w":135,"h":134,"offX":0,"offY":0,"sourceW":135,"sourceH":134},
-"gameButton_wan_en":{"x":1026,"y":327,"w":134,"h":133,"offX":0,"offY":1,"sourceW":135,"sourceH":134},
-"gameButtonSure_en":{"x":1630,"y":188,"w":289,"h":103,"offX":0,"offY":0,"sourceW":289,"sourceH":103},
-"gameHszTip1_en":{"x":0,"y":134,"w":658,"h":59,"offX":0,"offY":0,"sourceW":658,"sourceH":59},
-"gameHszTip2_en":{"x":1300,"y":67,"w":665,"h":65,"offX":0,"offY":0,"sourceW":665,"sourceH":65},
-"gameIcon_continue_en":{"x":1449,"y":0,"w":580,"h":65,"offX":0,"offY":0,"sourceW":580,"sourceH":65},
-"gameIcon_dq_en":{"x":1235,"y":134,"w":646,"h":52,"offX":0,"offY":0,"sourceW":646,"sourceH":52},
-"gameIcon_hu_en":{"x":1967,"y":67,"w":77,"h":52,"offX":0,"offY":0,"sourceW":77,"sourceH":52},
-"gameIcon_lose_en":{"x":1235,"y":188,"w":393,"h":78,"offX":0,"offY":17,"sourceW":394,"sourceH":104},
-"gameIcon_th_en":{"x":1026,"y":201,"w":43,"h":51,"offX":0,"offY":0,"sourceW":43,"sourceH":51},
-"gameIcon_tianhu_en":{"x":0,"y":67,"w":1298,"h":65,"offX":0,"offY":0,"sourceW":1298,"sourceH":65},
-"gameIcon_tiao_en":{"x":1987,"y":174,"w":49,"h":50,"offX":1,"offY":1,"sourceW":51,"sourceH":51},
-"gameIcon_ting_en":{"x":1071,"y":201,"w":42,"h":51,"offX":2,"offY":2,"sourceW":46,"sourceH":54},
-"gameIcon_tong_en":{"x":1883,"y":134,"w":50,"h":51,"offX":1,"offY":0,"sourceW":51,"sourceH":51},
-"gameIcon_tuoguan_en":{"x":0,"y":0,"w":1447,"h":65,"offX":0,"offY":0,"sourceW":1447,"sourceH":65},
-"gameIcon_wait_en":{"x":660,"y":134,"w":573,"h":65,"offX":0,"offY":0,"sourceW":573,"sourceH":65},
-"gameIcon_wait1_en":{"x":1026,"y":268,"w":425,"h":57,"offX":0,"offY":0,"sourceW":425,"sourceH":57},
-"gameIcon_wan_en":{"x":1935,"y":174,"w":50,"h":50,"offX":1,"offY":1,"sourceW":51,"sourceH":51},
-"gameIcon_xp_en":{"x":0,"y":371,"w":335,"h":52,"offX":0,"offY":0,"sourceW":335,"sourceH":52},
-"gameIcon_zhuang_en":{"x":1967,"y":121,"w":51,"h":51,"offX":0,"offY":0,"sourceW":51,"sourceH":51},
-"gameButton_cancelTrust_en":{"x":1453,"y":293,"w":232,"h":81,"offX":0,"offY":0,"sourceW":232,"sourceH":81},
-"gameButton_chi_en":{"x":342,"y":195,"w":169,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
-"gameButton_gang_en":{"x":513,"y":201,"w":169,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
-"gameButton_guo_en":{"x":0,"y":195,"w":169,"h":174,"offX":0,"offY":0,"sourceW":169,"sourceH":174},
-"gameButton_hu_en":{"x":171,"y":195,"w":169,"h":174,"offX":0,"offY":0,"sourceW":169,"sourceH":174}}}
+"gameButton_tong_en":{"x":1124,"y":281,"w":131,"h":131,"offX":2,"offY":1,"sourceW":135,"sourceH":134},
+"gameHszTip2_en":{"x":1294,"y":63,"w":661,"h":62,"offX":2,"offY":2,"sourceW":665,"sourceH":65},
+"gameIcon_dq_en":{"x":576,"y":126,"w":646,"h":52,"offX":0,"offY":0,"sourceW":646,"sourceH":52},
+"gameIcon_th_en":{"x":2005,"y":115,"w":42,"h":51,"offX":0,"offY":0,"sourceW":43,"sourceH":51},
+"gameIcon_ting_en":{"x":2000,"y":166,"w":42,"h":51,"offX":2,"offY":2,"sourceW":46,"sourceH":54},
+"gameButton_wan_en":{"x":992,"y":281,"w":132,"h":132,"offX":1,"offY":1,"sourceW":135,"sourceH":134},
+"gameIcon_zhuang_en":{"x":1955,"y":115,"w":50,"h":51,"offX":0,"offY":0,"sourceW":51,"sourceH":51},
+"gameButton_hu_en":{"x":1424,"y":183,"w":169,"h":174,"offX":0,"offY":0,"sourceW":169,"sourceH":174},
+"gameButton_peng_en":{"x":1593,"y":183,"w":169,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
+"gameIcon_tiao_en":{"x":1222,"y":126,"w":49,"h":50,"offX":1,"offY":1,"sourceW":51,"sourceH":51},
+"gameIcon_tianhu_en":{"x":0,"y":63,"w":1294,"h":63,"offX":2,"offY":2,"sourceW":1298,"sourceH":65},
+"gameIcon_wait_en":{"x":1443,"y":0,"w":570,"h":63,"offX":1,"offY":2,"sourceW":573,"sourceH":65},
+"gameIcon_tong_en":{"x":338,"y":188,"w":49,"h":49,"offX":1,"offY":1,"sourceW":51,"sourceH":51},
+"gameIcon_continue_en":{"x":0,"y":126,"w":576,"h":62,"offX":2,"offY":2,"sourceW":580,"sourceH":65},
+"gameButton_cancelTrust_en":{"x":762,"y":281,"w":230,"h":80,"offX":1,"offY":0,"sourceW":232,"sourceH":81},
+"gameIcon_hu_en":{"x":1955,"y":63,"w":77,"h":52,"offX":0,"offY":0,"sourceW":77,"sourceH":52},
+"gameButton_gang_en":{"x":169,"y":188,"w":169,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
+"gameIcon_xp_en":{"x":338,"y":313,"w":335,"h":52,"offX":0,"offY":0,"sourceW":335,"sourceH":52},
+"gameButton_guo_en":{"x":1255,"y":183,"w":169,"h":174,"offX":0,"offY":0,"sourceW":169,"sourceH":174},
+"gameButton_chi_en":{"x":1762,"y":183,"w":169,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
+"gameIcon_tuoguan_en":{"x":0,"y":0,"w":1443,"h":63,"offX":2,"offY":2,"sourceW":1447,"sourceH":65},
+"gameButton_ting_en":{"x":0,"y":188,"w":169,"h":173,"offX":0,"offY":0,"sourceW":169,"sourceH":173},
+"gameButton_tiao_en":{"x":1593,"y":356,"w":130,"h":132,"offX":2,"offY":1,"sourceW":135,"sourceH":134},
+"gameHszTip1_en":{"x":1294,"y":125,"w":657,"h":58,"offX":0,"offY":0,"sourceW":658,"sourceH":59},
+"gameIcon_lose_en":{"x":576,"y":178,"w":393,"h":78,"offX":0,"offY":17,"sourceW":394,"sourceH":104},
+"gameButtonSure_en":{"x":969,"y":178,"w":286,"h":103,"offX":1,"offY":0,"sourceW":289,"sourceH":103},
+"gameIcon_wait1_en":{"x":338,"y":256,"w":424,"h":57,"offX":0,"offY":0,"sourceW":425,"sourceH":57},
+"gameIcon_wan_en":{"x":1951,"y":166,"w":49,"h":50,"offX":1,"offY":1,"sourceW":51,"sourceH":51},
+"imgPao_en":{"x":387,"y":188,"w":49,"h":47,"offX":0,"offY":0,"sourceW":49,"sourceH":47}}}
