--- a/resource/assets/language/tc/game/gameSheet_tc.json
+++ b/resource/assets/language/tc/game/gameSheet_tc.json
@@ -1,29 +1,30 @@
 {"file":"gameSheet_tc.png","frames":{
-"gameButtonSure_tc":{"x":1610,"y":67,"w":289,"h":103,"offX":0,"offY":0,"sourceW":289,"sourceH":103},
-"gameHszTip1_tc":{"x":0,"y":67,"w":606,"h":63,"offX":0,"offY":0,"sourceW":606,"sourceH":63},
-"gameHszTip2_tc":{"x":608,"y":67,"w":529,"h":64,"offX":0,"offY":0,"sourceW":529,"sourceH":64},
-"gameIcon_continue_tc":{"x":1026,"y":134,"w":394,"h":64,"offX":0,"offY":0,"sourceW":394,"sourceH":65},
-"gameIcon_dq_tc":{"x":1162,"y":200,"w":225,"h":67,"offX":0,"offY":0,"sourceW":225,"sourceH":67},
-"gameIcon_hu_tc":{"x":1909,"y":271,"w":76,"h":83,"offX":0,"offY":0,"sourceW":76,"sourceH":83},
-"gameIcon_lose_tc":{"x":1422,"y":172,"w":194,"h":104,"offX":0,"offY":0,"sourceW":194,"sourceH":104},
-"gameIcon_th_tc":{"x":1543,"y":278,"w":43,"h":51,"offX":0,"offY":0,"sourceW":43,"sourceH":51},
-"gameIcon_tianhu_tc":{"x":1045,"y":0,"w":831,"h":65,"offX":0,"offY":0,"sourceW":831,"sourceH":65},
-"gameIcon_tiao_tc":{"x":1492,"y":278,"w":49,"h":50,"offX":1,"offY":1,"sourceW":51,"sourceH":51},
-"gameIcon_ting_tc":{"x":1851,"y":172,"w":46,"h":54,"offX":0,"offY":0,"sourceW":46,"sourceH":55},
-"gameIcon_tong_tc":{"x":1389,"y":278,"w":50,"h":51,"offX":1,"offY":0,"sourceW":51,"sourceH":51},
-"gameIcon_tuoguan_tc":{"x":0,"y":0,"w":1043,"h":65,"offX":0,"offY":0,"sourceW":1043,"sourceH":65},
-"gameIcon_wait_tc":{"x":1139,"y":67,"w":469,"h":65,"offX":0,"offY":0,"sourceW":469,"sourceH":65},
-"gameIcon_wait1_tc":{"x":1618,"y":271,"w":289,"h":54,"offX":0,"offY":0,"sourceW":289,"sourceH":54},
-"gameIcon_wan_tc":{"x":1441,"y":278,"w":49,"h":50,"offX":1,"offY":1,"sourceW":51,"sourceH":51},
-"gameIcon_xp_tc":{"x":1162,"y":269,"w":225,"h":61,"offX":0,"offY":0,"sourceW":225,"sourceH":61},
-"gameIcon_zhuang_tc":{"x":1987,"y":271,"w":51,"h":51,"offX":0,"offY":0,"sourceW":51,"sourceH":51},
-"gameButton_cancelTrust_tc":{"x":1618,"y":172,"w":231,"h":81,"offX":0,"offY":0,"sourceW":232,"sourceH":81},
-"gameButton_chi_tc":{"x":171,"y":132,"w":169,"h":174,"offX":0,"offY":0,"sourceW":169,"sourceH":174},
-"gameButton_gang_tc":{"x":342,"y":132,"w":169,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
-"gameButton_guo_tc":{"x":0,"y":132,"w":169,"h":174,"offX":0,"offY":0,"sourceW":169,"sourceH":174},
-"gameButton_hu_tc":{"x":684,"y":133,"w":169,"h":173,"offX":0,"offY":0,"sourceW":169,"sourceH":174},
-"gameButton_peng_tc":{"x":513,"y":133,"w":169,"h":173,"offX":0,"offY":0,"sourceW":169,"sourceH":173},
-"gameButton_tiao_tc":{"x":1026,"y":200,"w":134,"h":133,"offX":0,"offY":1,"sourceW":135,"sourceH":134},
-"gameButton_ting_tc":{"x":855,"y":133,"w":169,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
-"gameButton_tong_tc":{"x":1901,"y":0,"w":135,"h":134,"offX":0,"offY":0,"sourceW":135,"sourceH":134},
-"gameButton_wan_tc":{"x":1901,"y":136,"w":134,"h":133,"offX":0,"offY":1,"sourceW":135,"sourceH":134}}}
+"gameIcon_lose_tc":{"x":1347,"y":125,"w":194,"h":103,"offX":0,"offY":0,"sourceW":194,"sourceH":104},
+"gameButton_guo_tc":{"x":1865,"y":0,"w":169,"h":174,"offX":0,"offY":0,"sourceW":169,"sourceH":174},
+"gameButton_cancelTrust_tc":{"x":1765,"y":174,"w":229,"h":80,"offX":1,"offY":0,"sourceW":232,"sourceH":81},
+"gameIcon_tong_tc":{"x":225,"y":224,"w":49,"h":49,"offX":1,"offY":1,"sourceW":51,"sourceH":51},
+"gameIcon_wait_tc":{"x":1131,"y":62,"w":465,"h":63,"offX":2,"offY":1,"sourceW":469,"sourceH":65},
+"gameIcon_th_tc":{"x":1910,"y":254,"w":42,"h":51,"offX":0,"offY":0,"sourceW":43,"sourceH":51},
+"gameButton_peng_tc":{"x":790,"y":123,"w":166,"h":172,"offX":1,"offY":1,"sourceW":169,"sourceH":173},
+"gameButton_hu_tc":{"x":624,"y":123,"w":166,"h":172,"offX":1,"offY":1,"sourceW":169,"sourceH":174},
+"gameButton_wan_tc":{"x":1217,"y":186,"w":130,"h":132,"offX":2,"offY":1,"sourceW":135,"sourceH":134},
+"gameIcon_dq_tc":{"x":0,"y":224,"w":225,"h":67,"offX":0,"offY":0,"sourceW":225,"sourceH":67},
+"gameIcon_tiao_tc":{"x":1541,"y":176,"w":49,"h":50,"offX":1,"offY":1,"sourceW":51,"sourceH":51},
+"gameIcon_tianhu_tc":{"x":1038,"y":0,"w":827,"h":62,"offX":2,"offY":1,"sourceW":831,"sourceH":65},
+"gameIcon_wan_tc":{"x":1994,"y":174,"w":49,"h":50,"offX":1,"offY":1,"sourceW":51,"sourceH":51},
+"gameIcon_tuoguan_tc":{"x":0,"y":0,"w":1038,"h":62,"offX":3,"offY":1,"sourceW":1043,"sourceH":65},
+"gameButton_tiao_tc":{"x":1087,"y":186,"w":130,"h":132,"offX":2,"offY":1,"sourceW":135,"sourceH":134},
+"gameHszTip1_tc":{"x":0,"y":62,"w":606,"h":60,"offX":0,"offY":2,"sourceW":606,"sourceH":63},
+"gameButtonSure_tc":{"x":0,"y":122,"w":287,"h":102,"offX":1,"offY":0,"sourceW":289,"sourceH":103},
+"gameIcon_hu_tc":{"x":1765,"y":62,"w":74,"h":81,"offX":1,"offY":0,"sourceW":76,"sourceH":83},
+"gameButton_chi_tc":{"x":456,"y":123,"w":168,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
+"gameIcon_xp_tc":{"x":1636,"y":254,"w":225,"h":61,"offX":0,"offY":0,"sourceW":225,"sourceH":61},
+"gameIcon_ting_tc":{"x":1994,"y":224,"w":46,"h":51,"offX":0,"offY":2,"sourceW":46,"sourceH":55},
+"gameHszTip2_tc":{"x":606,"y":62,"w":525,"h":61,"offX":2,"offY":2,"sourceW":529,"sourceH":64},
+"gameIcon_continue_tc":{"x":956,"y":125,"w":391,"h":61,"offX":1,"offY":2,"sourceW":394,"sourceH":65},
+"gameButton_ting_tc":{"x":1596,"y":62,"w":169,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
+"gameButton_gang_tc":{"x":287,"y":122,"w":169,"h":173,"offX":0,"offY":1,"sourceW":169,"sourceH":174},
+"gameButton_tong_tc":{"x":956,"y":186,"w":131,"h":131,"offX":2,"offY":1,"sourceW":135,"sourceH":134},
+"gameIcon_zhuang_tc":{"x":1541,"y":125,"w":51,"h":51,"offX":0,"offY":0,"sourceW":51,"sourceH":51},
+"gameIcon_wait1_tc":{"x":1347,"y":235,"w":289,"h":54,"offX":0,"offY":0,"sourceW":289,"sourceH":54},
+"imgPao_tc":{"x":1861,"y":254,"w":49,"h":47,"offX":0,"offY":0,"sourceW":49,"sourceH":47}}}
